<resources>
    <string name="app_name">Frequency</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string name="hello_username">Hello %1$s</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact us</string>
    <string name="favourite_stations">Favourite stations</string>
    <string name="song">Song</string>
    <string name="lyrics">Lyrics</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages com.example.frequency.preferences.Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync com.example.frequency.preferences.Preferences -->
    <string name="field_is_empty">Field is empty</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="account_already_exists">Account already exists</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="guest">Guest</string>
    <string name="menu">Menu</string>
    <string name="sign_up_success">Registration success!</string>
    <string name="change_name">Change your name</string>
    <string name="language">Language</string>
    <string name="autologin_cb_text">Auto login</string>
    <string name="user_email">useremail@foo.com</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="auth_fail">Authorization failed</string>
    <string name="auth_success">Authorization success</string>
    <string name="user_image">User image</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_into_existing_account">Login into existing account</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create an account</string>
    <string name="new_user_profile">New user profile</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="welcome_to_frequency">Welcome to Frequency</string>
    <string name="radio_app">Radio app</string>
    <string name="continue_with_email_address">Continue with email address</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="user_email_address">User email address</string>
    <string name="create_account_failure">Create account failure</string>
    <string name="reg_needed">Registration needed</string>

    <!-- Player -->
    <string name="detail_play">Play</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_stop">Stop</string>
    <string name="description_btn_skip_to_next">Skip to next</string>
    <string name="description_btn_skip_to_previous">Skip to previous</string>
    <string name="detail_previous_list">Previous list</string>
    <string name="detail_next_list">Next list</string>


    <!-- About -->
    <string name="about_version">Version: %1$s</string>
    <string name="about_text">This app uses the free radio station directory at\nhttps://www.radio-browser.info\nEveryone can add stations to it or edit existing stations. It works like a wiki for online (streaming) radio stations.\n\nContact:\n\n\nProject page:\nhttps://github.com/kigya/Frequency\n\n\nAlso ideas for new features are always appreciated!\n\n</string>
    <string name="station">Station</string>
    <string name="station_name">Station: %1$s</string>
    <string name="now_playing">Now playing: 1%$s</string>
    <string name="about_station">About 1%$s</string>
    <string name="user_preview">Image Preview</string>
    <string name="projectPage">https://github.com/kigya/Frequency</string>
    <string name="content_in_progress_notification">Content in production process</string>
    <string name="common_app_noti_channel">Common app notification channel</string>
    <string name="logout_q">Logout</string>
    <string name="incorrect_app_work">Application work incorrectly.</string>
    <string name="works_without_perm">Our app will not works without this permission, you can add it in settings.</string>
    <string name="sure_q">Are you sure?</string>
    <string name="tech_issue">Technical issue</string>
    <string name="already_got">You already got it</string>
    <string name="bad_gate_way">Http bad gate way.</string>
    <string name="bgw_msg">Network problems - too high ping. Check your connection and try again.</string>
    <string name="another_step">You are now %1$s step away from secret</string>
    <string name="lo_for_music">Looking for music</string>
    <string name="error_try_again_later">Error, try again later</string>
    <string name="try_again">Reload</string>
    <string name="pos_try_again">Try again</string>
    <string name="label">label</string>
    <string name="action_play">action play</string>
    <string name="nw_time_limit">Network problem.</string>
    <string name="query_limit_reached">Time limit reached.</string>
    <string name="something_went_wrong">Something go wrong.</string>
    <string name="settings_tb">Settings</string>
    <string name="logout_tb">Logout</string>
    <string name="close_tb">Close</string>
    <string name="loading">Loading...</string>


</resources>