<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_outline_settings_24"
        app:title="Main">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="AUTOLOGIN"
            app:summaryOff="Login will be done manually"
            app:summaryOn="User will be login automatically"
            app:title="@string/autologin_cb_text" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="LANGUAGE"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_notifications_24"
        app:title="Notification">

        <SeekBarPreference
            app:defaultValue="50"
            app:key="NOTIFICATION_VOLUME"
            app:showSeekBarValue="true"
            app:title="Volume" />

        <SwitchPreference
            android:defaultValue="false"
            app:key="DISABLE_NOTIFICATIONS"
            app:summaryOff="You will receive all notifications"
            app:summaryOn="You will no longer receive notifications"
            app:title="Disable notifications" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="Other">

        <Preference android:title="@string/user_email"
            app:key="EMAIL"/>

        <EditTextPreference
            app:key="USERNAME"
            app:title="@string/change_name"
            app:useSimpleSummaryProvider="true"
            app:defaultValue=""/>

    </PreferenceCategory>


</PreferenceScreen>