<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ebony_clay">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/preview_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutPlaybackControls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/cyberpunk2077" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/station_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/station_name"
        android:textAlignment="center"
        android:textColor="@color/foam"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview_iv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/now_playing_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/now_playing"
        android:textAlignment="textStart"
        android:textColor="@color/foam"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/station_name_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/short_description_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/about_station"
        android:textAlignment="textStart"
        android:textColor="@color/foam"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/now_playing_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/additional_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textStart"
        android:textColor="@color/foam"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutPlaybackControls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/short_description_tv"
        tools:text="additional" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlaybackControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonRecord"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/detail_previous_list"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow_previous"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonPrev"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_btn_skip_to_previous"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonRecord"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonPlay"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/detail_play"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonNext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonPrev"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play_gray"
            tools:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonPause"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/detail_play"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonNext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonPrev"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_stop"
            tools:visibility="visible"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonNext"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_btn_skip_to_next"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next_offset_bt"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_right_arrow"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/next_offset_bt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/detail_next_list"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_right_arrow_next"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>