<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nav_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        tools:ignore="TextContrastCheck"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/nav_menu_user_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_round"
        android:contentDescription="@string/guest"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_abstract_user_flat_2"
        app:layout_constraintTop_toBottomOf="@id/nav_menu_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_menu_login_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/guest"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_menu_user_ib"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        tools:ignore="SmallSp,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@id/nav_menu_login_button"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>