<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ebony_clay">


    <LinearLayout
        android:id="@+id/top_panel_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/click_sign_in_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:gravity="end"
            android:text="@string/sign_in"
            android:textColor="@color/foam"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_account"
        android:textColor="@color/foam"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel_create_account" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitle_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/new_user_profile"
        android:textColor="@color/foam"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_username_create"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:alpha="1.0"
        android:hint="@string/name"
        android:textColorHint="@color/ebony_clay"
        app:boxBackgroundColor="@color/foam"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/ebony_clay"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeWidthFocused="1.5dp"
        app:counterOverflowTextColor="@color/ebony_clay"
        app:counterTextColor="@color/ebony_clay"
        app:endIconMode="clear_text"
        app:endIconTint="@color/ebony_clay"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/ebony_clay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_create"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/ebony_clay"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="textPersonName"
            android:textColor="@color/ebony_clay"
            android:textColorHint="@color/ebony_clay"
            android:textSize="12sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email_address_create_account"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:alpha="1.0"
        android:hint="@string/email_address"
        android:textColorHint="@color/ebony_clay"
        app:boxBackgroundColor="@color/foam"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/ebony_clay"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeWidthFocused="1.5dp"
        app:counterOverflowTextColor="@color/ebony_clay"
        app:counterTextColor="@color/ebony_clay"
        app:endIconMode="clear_text"
        app:endIconTint="@color/ebony_clay"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/ebony_clay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username_create"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/ebony_clay"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="textEmailAddress"
            android:textColor="@color/ebony_clay"
            android:textColorHint="@color/ebony_clay"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password_address_create_account"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:alpha="1.0"
        android:hint="@string/password"
        android:textColorHint="@color/ebony_clay"
        app:boxBackgroundColor="@color/foam"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/ebony_clay"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeWidthFocused="1.5dp"
        app:counterOverflowTextColor="@color/ebony_clay"
        app:counterTextColor="@color/ebony_clay"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/ebony_clay"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/ebony_clay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email_address_create_account"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/ebony_clay"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:textColor="@color/ebony_clay"
            android:textColorHint="@color/ebony_clay"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input__confirm_password_address_create_account"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:alpha="1.0"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/ebony_clay"
        app:boxBackgroundColor="@color/foam"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/ebony_clay"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeWidthFocused="1.5dp"
        app:counterOverflowTextColor="@color/ebony_clay"
        app:counterTextColor="@color/ebony_clay"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/ebony_clay"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/ebony_clay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_address_create_account"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/ebony_clay"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:textColor="@color/ebony_clay"
            android:textColorHint="@color/ebony_clay"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_create"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/foam"
        android:fitsSystemWindows="true"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:textColor="@color/ebony_clay"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>